--- a/Pod/Classes/CBCellSet2/CBCellSet2Comment.xib
+++ b/Pod/Classes/CBCellSet2/CBCellSet2Comment.xib
@@ -17,21 +17,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="136"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="140" translatesAutoresizingMaskIntoConstraints="NO" id="IAH-SW-gE5">
-                        <rect key="frame" x="20" y="11" width="32" height="31"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="31" id="Gbv-3b-NGA"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="32" id="axN-Qg-jEY"/>
-                            <constraint firstAttribute="width" constant="32" id="yKW-oZ-2DR"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="phP-b9-Hak">
-                        <rect key="frame" x="60" y="7" width="206" height="117"/>
+                        <rect key="frame" x="14" y="35" width="292" height="89"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Comments"/>
@@ -54,27 +43,34 @@
                         <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tv9-bn-Hvj">
+                        <rect key="frame" x="14" y="12" width="241" height="21"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="phP-b9-Hak" secondAttribute="trailing" constant="54" id="9vO-gC-Xtl"/>
+                    <constraint firstAttribute="trailing" secondItem="phP-b9-Hak" secondAttribute="trailing" constant="14" id="9vO-gC-Xtl"/>
                     <constraint firstAttribute="trailing" secondItem="Vq5-Mn-CPz" secondAttribute="trailing" constant="13" id="BvQ-GC-CPr"/>
-                    <constraint firstItem="phP-b9-Hak" firstAttribute="leading" secondItem="CgO-uJ-yR8" secondAttribute="leading" constant="60" id="HXE-wa-k9K"/>
-                    <constraint firstAttribute="bottom" secondItem="phP-b9-Hak" secondAttribute="bottom" constant="12.5" id="MI1-iZ-ge8"/>
+                    <constraint firstItem="Tv9-bn-Hvj" firstAttribute="leading" secondItem="CgO-uJ-yR8" secondAttribute="leading" constant="14" id="HEy-Kg-xhW"/>
+                    <constraint firstItem="phP-b9-Hak" firstAttribute="leading" secondItem="CgO-uJ-yR8" secondAttribute="leading" constant="14" id="HXE-wa-k9K"/>
+                    <constraint firstAttribute="bottom" secondItem="phP-b9-Hak" secondAttribute="bottom" constant="12" id="MI1-iZ-ge8"/>
                     <constraint firstItem="Vq5-Mn-CPz" firstAttribute="top" secondItem="CgO-uJ-yR8" secondAttribute="top" constant="10" id="OHg-sc-gEf"/>
-                    <constraint firstItem="IAH-SW-gE5" firstAttribute="top" secondItem="CgO-uJ-yR8" secondAttribute="top" constant="11" id="QWV-8l-lHQ"/>
                     <constraint firstItem="JI5-HF-ICC" firstAttribute="top" secondItem="CgO-uJ-yR8" secondAttribute="top" constant="14" id="S5R-X2-KMV"/>
-                    <constraint firstItem="phP-b9-Hak" firstAttribute="top" secondItem="CgO-uJ-yR8" secondAttribute="top" constant="7" id="YiD-ni-tHJ"/>
+                    <constraint firstItem="Vq5-Mn-CPz" firstAttribute="leading" secondItem="Tv9-bn-Hvj" secondAttribute="trailing" constant="10" id="T8g-et-lmO"/>
                     <constraint firstAttribute="trailing" secondItem="JI5-HF-ICC" secondAttribute="trailing" constant="20" id="ZUD-3e-0b6"/>
-                    <constraint firstItem="IAH-SW-gE5" firstAttribute="leading" secondItem="CgO-uJ-yR8" secondAttribute="leading" constant="20" id="ie0-5f-YBS"/>
+                    <constraint firstItem="Tv9-bn-Hvj" firstAttribute="top" secondItem="CgO-uJ-yR8" secondAttribute="top" constant="12" id="biM-cL-AAW"/>
+                    <constraint firstItem="phP-b9-Hak" firstAttribute="top" secondItem="Tv9-bn-Hvj" secondAttribute="bottom" constant="2" id="vAV-jU-OQw"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="donelabel" destination="Vq5-Mn-CPz" id="gLR-GC-6Bx"/>
-                <outlet property="icon" destination="IAH-SW-gE5" id="UU8-Fy-VbX"/>
                 <outlet property="pencilIcon" destination="JI5-HF-ICC" id="JbL-Ah-BiI"/>
                 <outlet property="textView" destination="phP-b9-Hak" id="0NH-oX-fZ8"/>
+                <outlet property="titleLabel" destination="Tv9-bn-Hvj" id="dgu-Ko-giP"/>
             </connections>
-            <point key="canvasLocation" x="74" y="51"/>
+            <point key="canvasLocation" x="74" y="50.5"/>
         </tableViewCell>
     </objects>
     <resources>
