--- a/Pod/Classes/CBCellSet2/CBCellSet2Picker.xib
+++ b/Pod/Classes/CBCellSet2/CBCellSet2Picker.xib
@@ -10,23 +10,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="180" id="zif-jD-7ys" customClass="CBCellSet2Picker">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="207" id="zif-jD-7ys" customClass="CBCellSet2Picker">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="207"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zif-jD-7ys" id="zKb-S9-SX9">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="179"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="206"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bwI-Dt-deC">
-                        <rect key="frame" x="0.0" y="27" width="320" height="162"/>
-                    </pickerView>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Va-m7-unw">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Va-m7-unw">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="45" id="2Zu-zB-gf1"/>
+                        </constraints>
                     </view>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tap to Enter" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="DKW-o3-TEI">
-                        <rect key="frame" x="65" y="11" width="235" height="22"/>
+                        <rect key="frame" x="162" y="11" width="144" height="22"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="eSk-bB-9ZO"/>
                         </constraints>
@@ -34,24 +33,30 @@
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Default Title" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="140" translatesAutoresizingMaskIntoConstraints="NO" id="M1n-cW-k4b">
-                        <rect key="frame" x="20" y="6" width="32" height="31"/>
+                        <rect key="frame" x="14" y="6" width="144" height="31"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="32" id="muc-LB-8GZ"/>
                             <constraint firstAttribute="height" constant="31" id="xcd-mi-bHr"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="32" id="zkf-vp-VR0"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bwI-Dt-deC">
+                        <rect key="frame" x="0.0" y="45" width="320" height="172"/>
+                    </pickerView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="DKW-o3-TEI" firstAttribute="top" secondItem="zKb-S9-SX9" secondAttribute="top" constant="11" id="1jv-mC-5Ah"/>
                     <constraint firstAttribute="bottom" secondItem="bwI-Dt-deC" secondAttribute="bottom" constant="-10" id="72F-xF-2dj"/>
-                    <constraint firstItem="M1n-cW-k4b" firstAttribute="leading" secondItem="zKb-S9-SX9" secondAttribute="leading" constant="20" id="MqC-Zz-QqW"/>
+                    <constraint firstItem="M1n-cW-k4b" firstAttribute="leading" secondItem="zKb-S9-SX9" secondAttribute="leading" constant="14" id="MqC-Zz-QqW"/>
+                    <constraint firstItem="DKW-o3-TEI" firstAttribute="width" secondItem="M1n-cW-k4b" secondAttribute="width" id="SD8-cM-3JM"/>
+                    <constraint firstItem="bwI-Dt-deC" firstAttribute="top" secondItem="5Va-m7-unw" secondAttribute="bottom" id="Ytn-fp-lBW"/>
                     <constraint firstAttribute="trailing" secondItem="bwI-Dt-deC" secondAttribute="trailing" id="hFT-YS-dQN"/>
-                    <constraint firstItem="DKW-o3-TEI" firstAttribute="leading" secondItem="zKb-S9-SX9" secondAttribute="leading" constant="65" id="tUr-21-zL7"/>
-                    <constraint firstAttribute="trailing" secondItem="DKW-o3-TEI" secondAttribute="trailing" constant="20" id="usS-M0-XfX"/>
+                    <constraint firstItem="5Va-m7-unw" firstAttribute="top" secondItem="zKb-S9-SX9" secondAttribute="top" id="kFT-Kf-NVV"/>
+                    <constraint firstAttribute="trailing" secondItem="5Va-m7-unw" secondAttribute="trailing" id="mxU-uT-w0x"/>
+                    <constraint firstItem="DKW-o3-TEI" firstAttribute="leading" secondItem="M1n-cW-k4b" secondAttribute="trailing" constant="4" id="s4m-6U-Ujc"/>
+                    <constraint firstAttribute="trailing" secondItem="DKW-o3-TEI" secondAttribute="trailing" constant="14" id="usS-M0-XfX"/>
+                    <constraint firstItem="5Va-m7-unw" firstAttribute="leading" secondItem="zKb-S9-SX9" secondAttribute="leading" id="wvw-eg-11f"/>
                     <constraint firstItem="M1n-cW-k4b" firstAttribute="top" secondItem="zKb-S9-SX9" secondAttribute="top" constant="6" id="xae-5i-J8f"/>
                     <constraint firstItem="bwI-Dt-deC" firstAttribute="leading" secondItem="zKb-S9-SX9" secondAttribute="leading" id="ztS-e7-aSK"/>
                 </constraints>
@@ -60,8 +65,9 @@
                 <outlet property="icon" destination="M1n-cW-k4b" id="wJP-bF-GuI"/>
                 <outlet property="picker" destination="bwI-Dt-deC" id="MOr-gg-1rb"/>
                 <outlet property="pickerField" destination="DKW-o3-TEI" id="L1C-aV-SeY"/>
+                <outlet property="titleLabel" destination="M1n-cW-k4b" id="qww-rC-Mz0"/>
             </connections>
-            <point key="canvasLocation" x="559" y="306"/>
+            <point key="canvasLocation" x="559" y="319.5"/>
         </tableViewCell>
     </objects>
 </document>
