Set all titleLabels to have 0 numberOfLines

--- a/Pod/Classes/CBCellSet2/CBCellSet2Button.xib
+++ b/Pod/Classes/CBCellSet2/CBCellSet2Button.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add to Calendar" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OYb-tM-B1f">
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add to Calendar" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OYb-tM-B1f">
                         <rect key="frame" x="14" y="12" width="292" height="20"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -34,7 +34,7 @@
             <connections>
                 <outlet property="titleLabel" destination="OYb-tM-B1f" id="j8f-8w-kIB"/>
             </connections>
-            <point key="canvasLocation" x="556" y="350.5"/>
+            <point key="canvasLocation" x="226" y="363"/>
         </tableViewCell>
     </objects>
 </document>
