--- a/Pod/Classes/CBCellSet2/CBCellSet2AutoComplete.xib
+++ b/Pod/Classes/CBCellSet2/CBCellSet2AutoComplete.xib
@@ -10,43 +10,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="54" id="lEg-DB-Bbp" customClass="CBCellSet2AutoComplete">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="45" id="lEg-DB-Bbp" customClass="CBCellSet2AutoComplete">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lEg-DB-Bbp" id="GQN-nM-Bpm">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="53"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="140" translatesAutoresizingMaskIntoConstraints="NO" id="Yr5-vB-fgX">
-                        <rect key="frame" x="20" y="11" width="32" height="31"/>
-                        <constraints>
-                            <constraint firstAttribute="width" priority="750" constant="32" id="m6u-zS-0EU"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tap to Enter" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="tgR-UL-PTD" customClass="MLPAutoCompleteTextField">
-                        <rect key="frame" x="65" y="16" width="235" height="22"/>
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tap to Enter" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="6BQ-6t-eLk" customClass="MLPAutoCompleteTextField">
+                        <rect key="frame" x="162" y="11" width="144" height="22"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AVa-X1-Rme">
+                        <rect key="frame" x="14" y="11" width="144" height="22"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="tgR-UL-PTD" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Yr5-vB-fgX" secondAttribute="trailing" constant="-6" id="3cm-aE-2cJ"/>
-                    <constraint firstItem="tgR-UL-PTD" firstAttribute="leading" secondItem="GQN-nM-Bpm" secondAttribute="leading" constant="65" id="ibg-2z-ik7"/>
-                    <constraint firstItem="Yr5-vB-fgX" firstAttribute="top" secondItem="GQN-nM-Bpm" secondAttribute="top" constant="11" id="o3b-tZ-MeW"/>
-                    <constraint firstAttribute="bottom" secondItem="Yr5-vB-fgX" secondAttribute="bottom" constant="11" id="pRD-fh-ni9"/>
-                    <constraint firstAttribute="trailing" secondItem="tgR-UL-PTD" secondAttribute="trailing" constant="20" id="qXK-CM-hOn"/>
-                    <constraint firstItem="tgR-UL-PTD" firstAttribute="centerY" secondItem="Yr5-vB-fgX" secondAttribute="centerY" id="qZN-2a-D9W"/>
-                    <constraint firstItem="Yr5-vB-fgX" firstAttribute="leading" secondItem="GQN-nM-Bpm" secondAttribute="leading" constant="20" id="t9M-Hw-xpe"/>
+                    <constraint firstItem="6BQ-6t-eLk" firstAttribute="leading" secondItem="AVa-X1-Rme" secondAttribute="trailing" constant="4" id="8KA-mw-CRC"/>
+                    <constraint firstItem="6BQ-6t-eLk" firstAttribute="centerY" secondItem="GQN-nM-Bpm" secondAttribute="centerY" id="A4z-cF-9GX"/>
+                    <constraint firstAttribute="trailing" secondItem="6BQ-6t-eLk" secondAttribute="trailing" constant="14" id="NbZ-QA-vyX"/>
+                    <constraint firstItem="AVa-X1-Rme" firstAttribute="centerY" secondItem="GQN-nM-Bpm" secondAttribute="centerY" id="g8j-tP-qbs"/>
+                    <constraint firstItem="AVa-X1-Rme" firstAttribute="leading" secondItem="GQN-nM-Bpm" secondAttribute="leading" constant="14" id="kpw-fO-pYP"/>
+                    <constraint firstItem="6BQ-6t-eLk" firstAttribute="width" secondItem="AVa-X1-Rme" secondAttribute="width" id="z5q-6Z-ahh"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="icon" destination="Yr5-vB-fgX" id="bCv-do-EH0"/>
-                <outlet property="textField" destination="tgR-UL-PTD" id="42w-G8-BCd"/>
+                <outlet property="textField" destination="6BQ-6t-eLk" id="Ul7-em-6EF"/>
+                <outlet property="titleLabel" destination="AVa-X1-Rme" id="Jsx-qb-Ri6"/>
             </connections>
-            <point key="canvasLocation" x="481" y="79"/>
+            <point key="canvasLocation" x="291" y="-33"/>
         </tableViewCell>
     </objects>
 </document>
