Got rid of yes/no labels in CBCellSet2Switch

--- a/CBFormController/Classes/CBCellSet2/CBCellSet2Switch.xib
+++ b/CBFormController/Classes/CBCellSet2/CBCellSet2Switch.xib
@@ -18,49 +18,27 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Received" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="139" translatesAutoresizingMaskIntoConstraints="NO" id="nGC-hh-cwe">
-                        <rect key="frame" x="14" y="12" width="145" height="20"/>
+                        <rect key="frame" x="14" y="12" width="227" height="20"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DdB-Pr-G7J">
-                        <rect key="frame" x="210" y="7" width="51" height="31"/>
+                        <rect key="frame" x="251" y="7" width="51" height="31"/>
                     </switch>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NON" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fiw-5A-QDx">
-                        <rect key="frame" x="168" y="12" width="38" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="38" id="k7O-2G-y9b"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BBb-Tl-DJz">
-                        <rect key="frame" x="267" y="12" width="38" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="38" id="nIR-JV-rbA"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="BBb-Tl-DJz" firstAttribute="leading" secondItem="DdB-Pr-G7J" secondAttribute="trailing" constant="8" symbolic="YES" id="2Ut-n6-Ii3"/>
                     <constraint firstItem="nGC-hh-cwe" firstAttribute="top" secondItem="c3r-c5-e0F" secondAttribute="top" constant="12" id="5tG-rg-mhN"/>
-                    <constraint firstItem="DdB-Pr-G7J" firstAttribute="leading" secondItem="Fiw-5A-QDx" secondAttribute="trailing" constant="4" id="KOU-Oi-yAJ"/>
-                    <constraint firstItem="Fiw-5A-QDx" firstAttribute="baseline" secondItem="BBb-Tl-DJz" secondAttribute="baseline" id="NHw-Yp-an0"/>
+                    <constraint firstItem="DdB-Pr-G7J" firstAttribute="leading" secondItem="nGC-hh-cwe" secondAttribute="trailing" constant="10" id="94J-7q-rBV"/>
+                    <constraint firstAttribute="trailing" secondItem="DdB-Pr-G7J" secondAttribute="trailing" constant="20" id="Dta-gW-mlf"/>
                     <constraint firstAttribute="bottom" secondItem="nGC-hh-cwe" secondAttribute="bottom" constant="12" id="NM8-z8-sn0"/>
                     <constraint firstItem="nGC-hh-cwe" firstAttribute="leading" secondItem="c3r-c5-e0F" secondAttribute="leading" constant="14" id="Q8Z-gy-E7X"/>
-                    <constraint firstAttribute="trailing" secondItem="BBb-Tl-DJz" secondAttribute="trailing" constant="15" id="ZjB-9d-vI5"/>
                     <constraint firstAttribute="centerY" secondItem="DdB-Pr-G7J" secondAttribute="centerY" id="gHi-dh-Qt1"/>
-                    <constraint firstItem="Fiw-5A-QDx" firstAttribute="leading" secondItem="nGC-hh-cwe" secondAttribute="trailing" constant="9" id="jxd-qX-EYR"/>
-                    <constraint firstItem="Fiw-5A-QDx" firstAttribute="centerY" secondItem="c3r-c5-e0F" secondAttribute="centerY" id="nZU-vE-TvK"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="noLabel" destination="Fiw-5A-QDx" id="cwy-yT-EFj"/>
                 <outlet property="theSwitch" destination="DdB-Pr-G7J" id="bnm-7O-EMe"/>
                 <outlet property="titleLabel" destination="nGC-hh-cwe" id="LOJ-mo-TMX"/>
-                <outlet property="yesLabel" destination="BBb-Tl-DJz" id="tfZ-VE-J3H"/>
             </connections>
         </tableViewCell>
     </objects>
